# Mandelbrot-Visualizer

./: CMakeLists.txt  files.cmake  readme.mkd
inc/: mandelbrot_visualizer.h
res/: mandelbrot_visualizer.ui
src/: main.cpp  mandelbrot_visualizer.cpp
